--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ hs_err_pid*
 /trab1/sisdist1/nbproject/private/
 /trab1/sisdist1/build/
 /trab1/sisdist1/dist/
+/trab2/Servidor/nbproject/private/
+/trab2/Cliente/nbproject/private/
+/trab2/Cliente/build/
+/trab2/Cliente/dist/
