hello world feito

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ hs_err_pid*
 /trab2/Cliente/nbproject/private/
 /trab2/Cliente/build/
 /trab2/Cliente/dist/
+/trab2/Servidor/build/
+/trab2/Servidor/dist/
