--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ hs_err_pid*
 /trab3/HelloWorldApplication/nbproject/private/
 /trab3/HelloWorldApplication/build/
 /trab3/HelloWorldApplication/dist/
+/trab3/servidor/dist/
