--- a/trab3/servidor/nbproject/private/private.properties
+++ b/trab3/servidor/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Jimmy\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-21454369.properties
+deploy.ant.properties.file=/home/todos/alunos/ct/a1013343/.netbeans/8.2/config/GlassFishEE6/Properties/gfv31759025578.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Jimmy/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+j2ee.server.domain=/usr/local/programas/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=/usr/local/programas/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/usr/local/programas/glassfish-4.1.1/glassfish:/usr/local/programas/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/usr/local/programas/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Jimmy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+selected.browser=default
+user.properties.file=/home/todos/alunos/ct/a1013343/.netbeans/8.2/build.properties
