--- a/trab4/Colecionador/nbproject/project.properties
+++ b/trab4/Colecionador/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Cliente.jar
+dist.jar=${dist.dir}/Colecionador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
