--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ hs_err_pid*
 /trab3/HelloWorldApplication/build/
 /trab3/HelloWorldApplication/dist/
 /trab3/servidor/dist/
+/trab4/Colecionador/build/
