--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ hs_err_pid*
 /trab3/HelloWorldApplication/dist/
 /trab3/servidor/dist/
 /trab4/Colecionador/build/
+/trab4/Coordenador/build/
+/trab4/Coordenador/dist/
