--- a/trab4/Colecionador/nbproject/private/private.properties
+++ b/trab4/Colecionador/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/samot/.netbeans/8.2/build.properties
+user.properties.file=/home/todos/alunos/ct/a1013343/.netbeans/8.2/build.properties
